add request info admin endpoints
