# backend/api/types.go
@@ -1,6 +1,10 @@
 package api
 
-import "time"
+import (
+	"time"
+
+	"github.com/ProRocketeers/url-shortener/domain/dto"
+)
 
 type shortenUrlRequest struct {
 	OriginalURL string  `json:"originalUrl" validate:"required,http_url"`
@@ -35,6 +39,24 @@ type shortLinkDto struct {
 	ShortURL    string     `json:"shortUrl"`
 	Slug        *string    `json:"slug"`
 	ExpiresAt   *time.Time `json:"expiresAt"`
+}
+
+type requestInfoDto struct {
+	ID        uint                `json:"id"`
+	RequestId string              `json:"requestId"`
+	Timestamp time.Time           `json:"timestamp"`
+	RealIP    *string             `json:"realIp"`
+	UserAgent *string             `json:"userAgent"`
+	Headers   map[string][]string `json:"headers"`
+	Path      string              `json:"path"`
+	Method    string              `json:"method"`
+	Query     map[string][]string `json:"query"`
+	Body      map[string]any      `json:"body"`
+}
+
+type listRequestInfoResponse struct {
+	Data       []requestInfoDto       `json:"data"`
+	Pagination *dto.PaginationInfoDTO `json:"pagination"`
 }
 
 type genericErrorResponse struct {
