# backend/domain/services/request_info.go
@@ -3,7 +3,9 @@ package services
 import (
 	"context"
 	"encoding/json"
+	"math"
 
+	"github.com/ProRocketeers/url-shortener/domain"
 	"github.com/ProRocketeers/url-shortener/domain/dto"
 	"github.com/ProRocketeers/url-shortener/domain/model"
 	"github.com/ProRocketeers/url-shortener/domain/storage"
@@ -45,6 +47,84 @@ func (s *RequestInfoService) Create(ctx context.Context, requestInfoDto dto.Requ
 			Str("path", requestInfoDto.Path).
 			Msg("saving request info error")
 	}
+}
+
+func (s *RequestInfoService) FindByIdOrRequestId(ctx context.Context, id uint, requestId string) (model.RequestInfo, error) {
+	var (
+		info *model.RequestInfo
+		err  error
+	)
+	if id != 0 {
+		info, err = s.Repository.FindById(ctx, id)
+	} else {
+		info, err = s.Repository.FindByRequestId(ctx, requestId)
+	}
+
+	if info == nil {
+		return model.RequestInfo{}, &domain.RequestInfoError{Code: domain.ErrorCodeInfoNotFound}
+	} else if err != nil {
+		log.Error().
+			Err(err).
+			Uint("id", id).
+			Msg("[admin] getting request info other error")
+		return model.RequestInfo{}, &domain.RequestInfoError{Code: domain.ErrorCodeInfoOther}
+	}
+	return *info, nil
+}
+
+func (s *RequestInfoService) ListRequestInfos(ctx context.Context, offset, limit *int) ([]model.RequestInfo, *dto.PaginationInfoDTO, error) {
+	var (
+		infos      []model.RequestInfo
+		total      int64
+		err        error
+		pagination *dto.PaginationInfoDTO
+	)
+
+	if offset == nil {
+		infos, _, err = s.Repository.List(ctx)
+		if err != nil {
+			log.Error().
+				Err(err).
+				Msg("[admin] listing request info other error")
+			return []model.RequestInfo{}, nil, &domain.RequestInfoError{Code: domain.ErrorCodeInfoOther}
+		}
+	} else {
+		infos, total, err = s.Repository.PaginatedList(ctx, *offset, *limit)
+		if err != nil {
+			log.Error().
+				Err(err).
+				Int("offset", *offset).
+				Int("limit", *limit).
+				Msg("[admin] listing request info other error")
+			return []model.RequestInfo{}, nil, &domain.RequestInfoError{Code: domain.ErrorCodeInfoOther}
+		}
+
+		currentPage := (*offset / *limit) + 1
+		totalPages := int(math.Ceil(float64(total) / float64(*limit)))
+
+		pagination = &dto.PaginationInfoDTO{
+			TotalRecords: total,
+			TotalPages:   totalPages,
+			CurrentPage:  currentPage,
+			PreviousPage: func() *int {
+				if currentPage == 1 {
+					return nil
+				}
+				p := currentPage - 1
+				return &p
+			}(),
+			NextPage: func() *int {
+				if currentPage == totalPages {
+					return nil
+				}
+				p := currentPage + 1
+				return &p
+			}(),
+			Offset: *offset,
+			Limit:  *limit,
+		}
+	}
+	return infos, pagination, nil
 }
 
 func jsonFromMap[T any](data map[string]T) (datatypes.JSON, error) {
